--- a/Tourist Family.html
+++ b/Tourist Family.html
@@ -19,8 +19,8 @@
                 Trailer</button></a>
         <br><br>
         <button>2D</button>
-        <button>Telugu</button>
-        <pre><big>2h 35m  Action,Drama    30 May,2025</big></pre>
+        <button>Tamil</button>
+        <pre><big>2h 35m  Drama,emotion  25 May,2025</big></pre>
         <button>Book Ticket</button>
     </center>
     <h2>About the Movie</h2>
