--- a/create_account.html
+++ b/create_account.html
@@ -10,7 +10,7 @@
     <center>
         <br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-        <form action="" autocomplete="off">
+        <form action="./Movies.html" autocomplete="off">
             <label for="name">👤 Full name :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
             <input type="text" id="name" name="Full Name" placeholder="Enter your full name" required ><br><br>
             
