--- a/Retro.html
+++ b/Retro.html
@@ -18,8 +18,8 @@
                 Trailer</button></a>
         <br><br>
         <button>2D</button>
-        <button>Telugu</button>
-        <pre><big>2h 35m  Action,Drama    30 May,2025</big></pre>
+        <button>Tamil</button>
+        <pre><big>2h 40m  Drama    3 May,2025</big></pre>
         <button>Book Ticket</button>
     </center>
     <h2>About the Movie</h2>
