--- a/Bhool Chuk Maaf.html
+++ b/Bhool Chuk Maaf.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bhool Chuk Maaf</title>
+     <link rel="icon" href="./Browser_icon.png">
 </head>
 <body>
     <center>
@@ -13,7 +14,7 @@
         <button>2D</button>
         <button>Hindi</button>
         <pre><big>2h 20m  comedy   23 May,2025</big></pre>
-        <button>Book Ticket</button>
+        <a href="./Booking_form.html"><button>Book Ticket</button></a>
     </center>
     <h2>About the Movie</h2>
     <p>Titli hai Ranjan ka pyaar, par haldi par atka hai uska sansaar,Toh dekhne zaroor aaiyega inki kahaani with parivaar.Get ready for a family entertainer that`s packed with fun, laughter, and all the feels.</p>
