--- a/Booking_form.html
+++ b/Booking_form.html
@@ -13,7 +13,7 @@
         <form action="">
             <label for="city">City: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
             <select name="city" id="city">
-                <option value="select">-----Select-----</option>
+                <option value="select" selected disabled>-----Select-----</option>
                 <option value="Hyderabad">Hyderabad</option>
                 <option value="Vijayawada">Vijayawada</option>
                 <option value="Kumbam">Kumbam</option>
@@ -24,7 +24,7 @@
 
             <label for="movie">Movie: </label>
             <select name="" id="movie">
-                <option value="selected">------------------Select-----------------</option>
+                <option value="selected" selected disabled>------------------Select-----------------</option>
                 <optgroup label="Telugu">    
                     <option value="">Bhairavam</option>
                     <option value="">Court</option>
@@ -49,7 +49,7 @@
 
             <label for="showtime">Show Timings: </label>
             <select name="showtime" id="showtime">
-                <option value="">------------------------Select------------------------</option>
+                <option value="" selected disabled>------------------------Select------------------------</option>
                 <option value="">Morning Show(9:00 AM – 12:00 PM)</option>
                 <option value="">Matinee Show(	12:00 PM – 3:00 PM)</option>
                 <option value="">First Show(3:00 PM – 6:00 PM)</option>
@@ -60,7 +60,7 @@
 
             <label for="class">Class: </label>
             <select name="" id="class">
-                <option value="">------Select-----</option>
+                <option value="" disabled selected>-------------------Select-----------------</option>
                 <option value="">Economy ₹120</option>
                 <option value="">Silver Class ₹180</option>
                 <option value="">Balcony ₹220</option>
