--- a/Khaleja.html
+++ b/Khaleja.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khaleja</title>
+    <link rel="icon" href="./Browser_icon.png">
 </head>
 <body>
     <center>
@@ -13,7 +14,7 @@
         <button>2D</button>
         <button>Telugu</button>
         <pre><big>2h 50m  Action,comedy,Fansty    31 May,2025</big></pre>
-        <button>Book Ticket</button>
+        <a href="./Booking_form.html"><button>Book Ticket</button></a>
     </center>
     <h2>About the Movie</h2>
     <p>A village is hounded by an unknown fatal disease and according to the prophecy, a godsend will save the village. Will Siddhappa figure it out before it`s too late?</p>
