--- a/Maaman.html
+++ b/Maaman.html
@@ -20,7 +20,7 @@
         <button>2D</button>
         <button>Tamil</button>
         <pre><big>2h 35m  Action,Drama    15 May,2025</big></pre>
-        <button>Book Ticket</button>
+        <a href="./Booking_form.html"><button>Book Ticket</button></a>
     </center>
     <h2>About the Movie</h2>
     <p>Maaman is a Tamil action drama that follows an emotional rural tale led by Soori, blending family sentiment,
