--- a/Movies.html
+++ b/Movies.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
+    <link rel="icon" href="./Browser_icon.png">
 </head>
 <body>
     <header>
@@ -18,6 +19,7 @@
         </table>   
     </nav>
     </header>
+    <hr>
     <center><h2><big>&#127901;Music</big></h2></center>
     <pre><big>                                      "That moment when a song feels like the opening scene of a movie you haven’t lived yet."
                                             While enjoying music ,search for movies which you like to watch in  theatres..
@@ -104,5 +106,11 @@
             
             </tr>
     </table>
+    <br><hr>
+    <footer>
+        <center>
+            <p>Copyright @ 2025 IMAX Cinemas.com@ - All Right Reserved.</p>
+        </center> 
+    </footer>
 </body>
 </html>
