--- a/Raid 2.html
+++ b/Raid 2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bhool Chuk Maaf</title>
+    <link rel="icon" href="./Browser_icon.png">
 </head>
 <body>
     <center>
@@ -13,7 +14,7 @@
         <button>2D</button>
         <button>Hindi</button>
         <pre><big>2h 20m  Drama,Thriller   1 May,2025</big></pre>
-        <button>Book Ticket</button>
+        <a href="./Booking_form.html"><button>Book Ticket</button></a>
     </center>
     <h2>About the Movie</h2>
     <p>A fiery Income Tax officer, Amay Patnaik, confronts the corrupt nexus in Bhoj. Beneath the veneer of honesty lies a sinister operation tied to Dada Bhai, a revered politician. As Amay unravels layers of deceit buried in fields and fortresses, one question looms: will justice prevail, or will power silence the truth?</p>
