--- a/Tourist Family.html
+++ b/Tourist Family.html
@@ -15,13 +15,13 @@
         <a href="https://www.youtube.com/embed/9sH1PoGOydc?si=kB19NdMBU1b-eSmz" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen" target="location"><button>Watch
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen target="location"><button>Watch
                 Trailer</button></a>
         <br><br>
         <button>2D</button>
         <button>Tamil</button>
         <pre><big>2h 35m  Drama,emotion  25 May,2025</big></pre>
-        <button>Book Ticket</button>
+        <a href="./Booking_form.html"><button>Book Ticket</button></a>
     </center>
     <h2>About the Movie</h2>
     <p>Tourist Family is a heartfelt Tamil drama that follows a Sri Lankan Tamil family's journey to India in search of
