--- a/kancharapalem.html
+++ b/kancharapalem.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>c/o kancharapalem</title>
+     <link rel="icon" href="./Browser_icon.png">
 </head>
 <body>
     <!DOCTYPE html>
@@ -20,7 +21,7 @@
         <button>2D</button>
         <button>Telugu</button>
         <pre><big>2h 35m  Drama    30 May,2025</big></pre>
-        <button>Book Ticket</button>
+        <a href="./Booking_form.html"><button>Book Ticket</button></a>
     </center>
     <h2>About the Movie</h2>
     <p>The film explores the love life of four men, which includes an unmarried man Raju, Sundaram, a student in love with his classmate, Joseph a wayward man in love with a dancer and Gaddam who has fallen for a prostitute.</p>
