--- a/love karu ya shaadi.html
+++ b/love karu ya shaadi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>love karu yaa shaadi</title>
+     <link rel="icon" href="./Browser_icon.png">
 </head>
 <body>
      <center>
@@ -12,7 +13,7 @@
         <button>2D</button>
         <button>Hindi</button>
         <pre><big>2h 40m  Comedy,Drama   1 june,2025</big></pre>
-        <button>Book Ticket</button>
+        <a href="./Booking_form.html"><button>Book Ticket</button></a>
     </center>
     <h2>About the Movie</h2>
     <p>Rahul, a 27-year-old MBA from Kanpur, finds himself torn between societal pressure and personal desire when he falls for Priya, a strong-willed MNC professional from Lucknow. While his spiritualist mother pushes for an arranged marriage, Rahul`s friend Raj urges him to enjoy life without commitment. As love blossoms between Rahul and Priya, conflicting beliefs about relationships spark tension. When a misunderstanding threatens to pull them apart, Rahul must confront his feelings, grow up, and choose between fleeting freedom and lasting love.</p>
