--- a/snehithudu.html
+++ b/snehithudu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>snehithudu</title>
+    <link rel="icon" href="./Browser_icon.png">
 </head>
 <body>
      <center>
@@ -12,7 +13,7 @@
         <button>2D</button>
         <button>Telugu</button>
         <pre><big>2h 40m  Comedy    1 june,2025</big></pre>
-        <button>Book Ticket</button>
+        <a href="./Booking_form.html"><button>Book Ticket</button></a>
     </center>
     <h2>About the Movie</h2>
     <p>Pani, Venkat and Nihil are three engineering students who share a room in Ideal College of Engineering. Venkat is pursuing engineering against his wish of becoming a Wild Life Photographer. Nikhil is studying to change his family's fortunes and wants to pull them out of poverty. Pani is passionate on machines and believes in applications than memorizing the definitions. The rest of the story is all about how they successfully pass out from the college by winning the hearts of everyone around.</p>
