--- a/Bhairavam.html
+++ b/Bhairavam.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bhairavam</title>
+    <link rel="icon" href="./Browser_icon.png">
 </head>
 <body>
     <center>
@@ -13,7 +14,7 @@
         <button>2D</button>
         <button>Telugu</button>
         <pre><big>2h 35m  Action,Drama    30 May,2025</big></pre>
-        <button>Book Ticket</button>
+        <a href="./Booking_form.html"><button>Book Ticket</button></a>
     </center>
     <h2>About the Movie</h2>
     <p>Bhairavam is a Telugu movie starring Bellamkonda Sai Srinivas, Manchu Manoj Kumar and Naara Rohith in prominent roles. It is directed by Vijay Kanakamedala</p>
