--- a/Court.html
+++ b/Court.html
@@ -20,7 +20,7 @@
         <button>2D</button>
         <button>Telugu</button>
         <pre><big>2h 35m  Action,Drama    30 May,2025</big></pre>
-        <button>Book Ticket</button>
+       <a href="./Booking_form.html"> <button>Book Ticket</button></a>
     </center>
     <h2>About the Movie</h2>
     <p>A passionate defense attorney fights against prejudice and corruption in the justice system while representing a
