--- a/create_account.html
+++ b/create_account.html
@@ -31,7 +31,7 @@
             
             <label for="pass">🔒 Password :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
             <input type="text" id="pass" name="Password" size="25px" minlength="8" maxlength="10"
-                pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*]).{8,16}" title="Enter valid password"
+                pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*]).{8,16}" title="Abcde@239"
                 placeholder="Enter your password" required><br><br>
 
             <input type="checkbox" id="check" required><label for="check">Terms and Conditions</label><br><br>
